Adicao do repository