@@ -14,38 +14,36 @@ import com.otaviobraga.cursomc.repositories.CategoriaRepository;
 import com.otaviobraga.cursomc.repositories.ProdutoRepository;
 
 @SpringBootApplication
-public class CursoudApplication implements CommandLineRunner{
+public class CursoudApplication implements CommandLineRunner {
 
 	@Autowired
 	private CategoriaRepository categoriaRepository;
-	@Autowired 
+	@Autowired
 	private ProdutoRepository produtoRepository;
-	
+
 	public static void main(String[] args) {
 		SpringApplication.run(CursoudApplication.class, args);
 	}
 
 	@Override
 	public void run(String... args) throws Exception {
-		
-	Categoria cat1 = new Categoria(null, "Informática");
-	Categoria cat2 = new Categoria(null, "Escritório");
-		
-	Produto p1 = new Produto(null, "Computaros", 2000.00);
-	Produto p2 = new Produto(null, "Impressora", 800.00);
-	Produto p3 = new Produto(null, "Mouse", 80.00);
-	
-	cat1.getProdutos().addAll(List.of(p1, p2, p3));
-	cat2.getProdutos().addAll(List.of(p2));
-	
-	p1.getCategorias().addAll(List.of(cat1));
-	p2.getCategorias().addAll(List.of(cat1, cat2));
-	p3.getCategorias().addAll(List.of(cat1)); 	
-	
-	categoriaRepository.saveAll(Arrays.asList(cat1, cat2));
-	produtoRepository.saveAll(Arrays.asList(p1,p2,p3));
+
+		Categoria cat1 = new Categoria(null, "Informática");
+		Categoria cat2 = new Categoria(null, "Escritório");
+
+		Produto p1 = new Produto(null, "Computaros", 2000.00);
+		Produto p2 = new Produto(null, "Impressora", 800.00);
+		Produto p3 = new Produto(null, "Mouse", 80.00);
+
+		cat1.getProdutos().addAll(List.of(p1, p2, p3));
+		cat2.getProdutos().addAll(List.of(p2));
+
+		p1.getCategorias().addAll(List.of(cat1));
+		p2.getCategorias().addAll(List.of(cat1, cat2));
+		p3.getCategorias().addAll(List.of(cat1));
+
+		categoriaRepository.saveAll(Arrays.asList(cat1, cat2));
+		produtoRepository.saveAll(Arrays.asList(p1, p2, p3));
 	}
 
-	
-	
 }
